--- a/.gitignore
+++ b/.gitignore
@@ -1,1 +1,49 @@
-node_modules
+# Ignore docs files
+_gh_pages
+_site
+docs/**/*
+/kitchen/data/framekit.json
+
+# Ignore ruby files
+.ruby-version
+.bundle
+vendor/cache
+vendor/bundle
+
+# Numerous always-ignore extensions
+*.diff
+*.err
+*.log
+*.orig
+*.rej
+*.swo
+*.swp
+*.vi
+*.zip
+*~
+*.bak
+*.log.*
+
+# OS or Editor folders
+._*
+.cache
+.DS_Store
+.idea
+.project
+.settings
+.tmproj
+*.esproj
+*.sublime-project
+*.sublime-workspace
+nbproject
+Thumbs.db
+.temp
+
+twbsconfig.yml
+
+# Folders to ignore
+node_modules/**/*
+js/coverage
+_dev/**/*
+build/**/*
+
