--- a/package.json
+++ b/package.json
@@ -10,11 +10,22 @@
     "jquery.easing": "^1.4.1"
   },
   "devDependencies": {
+    "@babel/core": "^7.7.7",
+    "@babel/plugin-proposal-export-namespace-from": "^7.7.4",
+    "@babel/plugin-transform-modules-commonjs": "^7.7.5",
+    "@babel/preset-env": "^7.7.7",
+    "@babel/preset-react": "^7.7.4",
+    "@babel/register": "^7.7.7",
+    "babel-plugin-dynamic-import-node-babel-7": "^2.0.7",
+    "babel-plugin-transform-class-properties": "^6.24.1",
+    "babelify": "^10.0.0",
     "browser-sync": "^2.26.7",
+    "browserify": "^16.5.0",
     "del": "^5.1.0",
     "gulp": "^4.0.2",
     "gulp-autoprefixer": "^7.0.1",
     "gulp-clean-css": "^4.2.0",
+    "gulp-connect-php": "^1.0.3",
     "gulp-header": "^2.0.9",
     "gulp-plumber": "^1.2.1",
     "gulp-rename": "^2.0.0",
@@ -28,6 +39,7 @@
   },
   "scripts": {
     "start": "node_modules/.bin/gulp watch",
+    "babel": "browserify build-js/scripts.js -o js/crankfish.js -t [ babelify --presets [ @babel/preset-env @babel/preset-react ]  ]",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "repository": {
